Show both naval warship and naval transport stats for port strikes.